--- a/ui/Add_a_point_road_sign.ui
+++ b/ui/Add_a_point_road_sign.ui
@@ -27,7 +27,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>images/Add_a_point_road_sign_ICON.png</normaloff>images/Add_a_point_road_sign_ICON.png</iconset>
+    <normaloff>../img/Add_a_point_road_sign_ICON.png</normaloff>../img/Add_a_point_road_sign_ICON.png</iconset>
   </property>
   <property name="toolTip">
    <string notr="true"/>
