--- a/ui/Add_a_point_road_sign.ui
+++ b/ui/Add_a_point_road_sign.ui
@@ -7,23 +7,23 @@
     <x>0</x>
     <y>0</y>
     <width>700</width>
-    <height>700</height>
+    <height>730</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>700</width>
-    <height>700</height>
+    <height>730</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>700</width>
-    <height>700</height>
+    <height>730</height>
    </size>
   </property>
   <property name="windowTitle">
-   <string notr="true">Add_a_point_road_sign_0_2</string>
+   <string notr="true">Add_a_point_road_sign</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -609,6 +609,29 @@
      <string notr="true">raster</string>
     </property>
    </widget>
+  </widget>
+  <widget class="QLabel" name="Street_name_label">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>700</y>
+     <width>55</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string notr="true">street:</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="Street_name_textEdit">
+   <property name="geometry">
+    <rect>
+     <x>65</x>
+     <y>700</y>
+     <width>630</width>
+     <height>22</height>
+    </rect>
+   </property>
   </widget>
  </widget>
  <resources/>
